# repolyze

./: .gitignore  .readthedocs.yml  NOTICE  README.md  noxfile.py  pyproject.toml
docs/source/: conf.py  index.md
repolyze/core/: analyze.py
repolyze/core/formatting/: tree.py
tests/unit_tests/: __init__.py
tests/unit_tests/cli/: __init__.py  test_main.py
tests/unit_tests/core/: __init__.py  test_analyze.py
tests/unit_tests/core/filesystem/: __init__.py  test_paths.py  test_scan.py
tests/unit_tests/core/formatting/: __init__.py  test_human.py  test_tree.py
tests/unit_tests/core/tree/: __init__.py  test_build.py
tests/unit_tests/models/: __init__.py  test_repo.py
