[project]
name = "repolyze"
version = "0.1.0"
description = "Repo Analyzer"
readme = {file = "README.md", content-type = "text/markdown"}
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
]
keywords = ["repolyze", "repo statistics", "repo", "repo analyzer", "repository analysis"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
homepage = "https://github.com/dheerajnbhat/repolyze"
repository = "https://github.com/dheerajnbhat/repolyze.git"
documentation = "https://github.com/dheerajnbhat/repolyze/blob/main/README.md"

[[project.authors]]
name = "Dheeraj Bhat"
email = "dheerajnbhat@gmail.com"

[[project.maintainers]]
name = "Dheeraj Bhat"
email = "dheerajnbhat@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test-ci = [
  "nox[pbs]>=2025.11.12",
]
dev = [
  "uv>=0.9.21",
]
test = [
  "pytest>=8.4.2",
  "pytest-xdist>=3.8.0",
]
lint = [
  "ruff>=0.14.10"
]
docs = [
  "myst-parser>=3.0.1",
  "sphinx>=7.4.7",
  "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
repolyze = "repolyze.cli.main:main"
